--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,3 +12,4 @@ jobs:
         with:
           access-token: ${{ secrets.ACCESS_TOKEN }}
           deploy-branch: main
+          gatsby-args: --prefix-paths
