--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "url": "git+https://github.com/skohub-io/skohub-blog.git"
   },
   "scripts": {
-    "build": "gatsby build --prefix-paths",
+    "build": "gatsby build",
     "develop": "gatsby develop -H 0.0.0.0",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
